  media (Cheng and Fomel)
* tccs/deblend: Iterative deblending of simultaneous-source seismic
  data using seislet-domain shaping regularization (Chen, Fomel, and
  Hu)

To SCons:

* Added SLURM support for running MPI jobs through SCons
* Added usedatapath= in Fetch for placing downloaded data in DATAPATH by default
* Upgraded to scons-2.3.3

To documentation:

To APIs:

To the Python package:

* sfbatch: script for submitting jobs to a cluster queue system 
* Changed MPIRUN from a command-line option to a configure option
* Updated sunrpc configuration for the current version of Cygwin on Windows
* vpannotate: interactive wrapper for annotations with sfbox

To programs:

* Added color=lb (Light-Bartlein), color=gist_earth, 
  color=spectral, and color=seismic color schemes
* sfipick: example Tkinter script for interactive picking
* sfvelan: interactive velocity picking using matplotlib
* Added x0= and mwt= parameters in sfconjgrad
* Added griddash= parameter to stdplot
* sflas2rsf: Convert LAS-2 well logs to RSF
* Added segy= parameter to sfheaderattr

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:

* Fixed __array_wrap__ bug in Python API
* Fixed bug in framenum with no label1 in stdplot

In the Python package:

In programs:

* Fixed output size bug in sfinttest1
* Fixed memsize definition bug in sfrotate and sfreverse

In the build system:

* Added '.exe' suffix for python programs in Cygwin

===Changes in defaults and interfaces===

==Release 1.6 (2014-05-09)==

===Additions and enhancements===

To the reproducible documents collection:

* gallery: migration gallery
* Moved jsg to tccs
* tccs/buttefly: A fast butterfly algorithm for generalized Radon
  transforms (Hu, Fomel, Demanet, and Ying)
* tccs/opwd: Omnidirectional plane-wave destruction (Chen, Fomel, and
  Lu)
* tccs/specrecom: Automated spectral recomposition with application in
  stratigraphic interpretation (Cai, Fomel, and Zeng)