@@ -3,13 +3,13 @@ sys.path.append('../../framework')
 import bldutil
 
 progs = '''
-dispelem diff mulawefd2d emd norm blend xcorr SVD matoper lesolver 
-pclipc2 dwtdenoise trisolver symposolver seiscut seisthr Testsolver 
+dispelem diff mulawefd2d emd norm blend xcorr matoper lesolver pclipc2
+dwtdenoise trisolver symposolver seiscut seisthr Testsolver
 Testsolver1 trapepass lagrange heatexplitest heatimplitest hyperdif
-zerotrace hilbert cdivdir cabs cemd1 cemd2 snr2 snr3 preerror threshold1
-tsmf fxdecon simidenoise bin2rsf rsf2bin halfthr hradon suplane simidenoise1
-rmtrace prekirch psmig pocssemb simivscan afd2d prekirchsr simpostkirch
-presr nlm1 nlm2 dblendseis afd2domp low
+zerotrace hilbert cdivdir cabs cemd1 cemd2 snr2 snr3 preerror
+threshold1 tsmf fxdecon simidenoise bin2rsf rsf2bin halfthr hradon
+suplane simidenoise1 rmtrace prekirch psmig pocssemb simivscan afd2d
+prekirchsr simpostkirch presr nlm1 nlm2 dblendseis afd2domp low
 '''
 ccprogs = 'diffcxx'
 
