@@ -12,7 +12,7 @@ matchoper mean mf mig2 miss4 miss43 mkcmp mlm mtm mtres mlwm multiple
 mvo mvo1 nmradon nmult nonloc oclet oshift1 pwcsemb pwd2 pwsfault
 pwsfault3 pwsmooth3 radonoper reversval rtft saltpepper sclet seisavf
 seisbreg2 seishrink seismis2 seispocs seisreg2 seisxwell sharpsimi snr
-sphase st stft svddenoise swell testapef testcasoper testmatch
+sphase st stft svd svddenoise swell testapef testcasoper testmatch
 threshold2 tvmf txrna txrna2 txrna3 v2d variogram variogram2 vconvert
 wavemis2 winscan wmf zcwt
 '''
